# DiveLight

./: CMakeLists.txt  client.cpp  client.hpp  columnrenderer.cpp  columnrenderer.hpp  fft.cpp  input.cpp  input.hpp  ledclient.cpp  main.cpp  renderer.cpp  renderer.hpp  server.cpp  server.hpp  stream.cpp  stream.hpp  utils.hpp  visualizer.cpp  visualizer.hpp
include/: beatdetection.hpp  boxspectrum.hpp  bufferpool.hpp  client.hpp  config.hpp  fft.hpp  input.hpp  ledclient.hpp  menu.hpp  renderer.hpp  utils.hpp  visualizer.hpp
server/: README.md
server/pythonrelay/: main.py
src/: beatdetection.cpp  boxspectrum.cpp  bufferpool.cpp  client.cpp  columnrenderer.cpp  fft.cpp  input.cpp  ledclient.cpp  main.cpp  menu.cpp  renderer.cpp  server.cpp  stream.cpp  visualizer.cpp
